--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
 	"description": "A REST API project, part of Free Code Camp's curriculum",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "env-cmd -f ./.env nodemon server.js"
 	},
 	"dependencies": {
-		"express": "^4.14.0",
-		"mongoose": "^4.7.2",
-		"mongodb": "^2.2.14",
-		"body-parser": "^1.15.2",
-		"cors": "^2.8.1",
-		"shortid": "^2.2.6"
+		"body-parser": "1.19.0",
+		"cors": "2.8.5",
+		"env-cmd": "^10.0.1",
+		"express": "4.17.1",
+		"mongodb": "3.4.1",
+		"mongoose": "5.8.7",
+		"nodemon": "^2.0.2",
+		"shortid": "2.2.15"
 	},
 	"engines": {
 		"node": "6.9.1"
